Challenge11 fix loading problems in editor

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
 <!-- render all channels when the body has loaded -->
 <!-- #10 #sorting: append all channels in new #sort order when the body has #load ed ; #10 #emojis added more #suitable-->
-<body>
+<!-- #11 onload only called because editor on edx has problems with $(see comments)-->
+<body onload="initializeFix()">
 
 <!-- channel area -->
 <!-- #9 #shdw #elv: channels view goes 16dp high, like a nav drawer -->
